max-width sur la carte

--- a/sass/style.css
+++ b/sass/style.css
@@ -731,6 +731,14 @@ form {
     white-space: nowrap;
     overflow: hidden;
   }
+
+  .carte-resto--page1 {
+    max-width: 200px;
+}
+
+.description-carte--page1 {
+    max-width: 270px;
+}
 }
 
 /*# sourceMappingURL=style.css.map */
