--- a/sass/style.scss
+++ b/sass/style.scss
@@ -786,5 +786,13 @@ padding-top: 78px;
       overflow: hidden;
     }
 
+    .carte-resto--page1 {
+        max-width: 200px;
+    }
+
+    .description-carte--page1 {
+        max-width: 300px;
+    }
+
 }
 
